# ChangeLog for app-editors/ne
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ChangeLog,v 1.50 2014/03/11 19:51:09 pacho Exp $

  11 Mar 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #53266

*ne-2.5 (07 Jan 2014)

  07 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -ne-2.0.3.ebuild,
  -ne-2.1.ebuild, +ne-2.5.ebuild:
  Version bump (bug #463485). Removed old.

  21 Aug 2012; Michael Weber <xmw@gentoo.org> ne-2.3.ebuild:
  ppc stable (bug 418565)

  07 Aug 2012; Brent Baude <ranger@gentoo.org> ne-2.3.ebuild:
  Marking ne-2.3 ppc64 for bug 418565

  02 Aug 2012; Markos Chandras <hwoarang@gentoo.org> ne-2.3.ebuild:
  Stable on amd64 wrt bug #418565

  02 Aug 2012; Jeff Horelick <jdhore@gentoo.org> ne-2.3.ebuild:
  marked x86 per bug 418565

*ne-2.3 (16 Mar 2012)

  16 Mar 2012; Patrick Lauer <patrick@gentoo.org> +ne-2.3.ebuild:
  Bump

  12 Mar 2011; Sven Wegener <swegener@gentoo.org> -ne-1.42.ebuild,
  -ne-1.43.ebuild:
  Cleanup.

  03 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> ne-2.0.3.ebuild:
  ppc64 stable wrt #320911

  11 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> ne-2.1.ebuild,
  +files/ne-2.1-asneeded.patch:
  Fix building with -Wl,--as-needed wrt #323595 by Diego E. Pettenò.

  31 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> ne-2.0.3.ebuild:
  x86 stable wrt bug #320911

  25 May 2010; Pacho Ramos <pacho@gentoo.org> ne-2.0.3.ebuild:
  stable amd64, bug 320911

  24 May 2010; <nixnut@gentoo.org> ne-2.0.3.ebuild:
  ppc stable #320911

  21 May 2010; Sven Wegener <swegener@gentoo.org> ne-2.0.3.ebuild:
  Move sed to src_prepare.

*ne-2.1 (21 May 2010)

  21 May 2010; Sven Wegener <swegener@gentoo.org> +ne-2.1.ebuild:
  Version bump, bug #319213.

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> ne-2.0.3.ebuild:
  Transfer Prefix keywords

*ne-2.0.3 (25 Mar 2009)

  25 Mar 2009; Sven Wegener <swegener@gentoo.org> +ne-2.0.3.ebuild:
  Version bump.
