@@ -1,37 +1,44 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ne-2.5.ebuild,v 1.1 2014/01/07 08:37:33 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ne-2.5.ebuild,v 1.3 2014/10/28 22:49:52 jer Exp $
 
 EAPI=5
-
 inherit eutils toolchain-funcs
 
 DESCRIPTION="the nice editor, easy to use for the beginner and powerful for the wizard"
-HOMEPAGE="http://ne.dsi.unimi.it/"
-SRC_URI="http://ne.dsi.unimi.it/${P}.tar.gz"
+HOMEPAGE="http://ne.di.unimi.it/"
+SRC_URI="${HOMEPAGE}/${P}.tar.gz"
 
-LICENSE="GPL-2"
+LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE=""
+IUSE=tinfo
 
-RDEPEND=">=sys-libs/ncurses-5.2"
-DEPEND="${RDEPEND}
-	dev-lang/perl"
+DEPEND="
+	>=sys-libs/ncurses-5.2[tinfo?]
+"
+RDEPEND="
+	${DEPEND}
+	dev-lang/perl
+"
 
 src_prepare() {
 	sed -i -e 's/-O3//' src/makefile || die
 }
 
+src_configure() {
+	if use tinfo; then
+		sed -i -e 's|-lcurses|-ltinfo|g' src/makefile || die
+	else
+		sed -i -e 's|-lcurses|-lncurses|g' src/makefile || die
+	fi
+}
+
 src_compile() {
-	emake \
-		-j1 \
-		-C src \
-		ne \
-		OPTS="${CFLAGS}" \
-		CC="$(tc-getCC)" \
+	emake -C src CC="$(tc-getCC)" \
 		NE_GLOBAL_DIR="/usr/share/ne" \
-		|| die "emake failed"
+		OPTS="${CFLAGS}" \
+		ne || die
 }
 
 src_install() {
