@@ -2,11 +2,11 @@ DEFINED_PHASES=compile install prepare
 DEPEND=>=sys-libs/ncurses-5.2 dev-lang/perl
 DESCRIPTION=the nice editor, easy to use for the beginner and powerful for the wizard
 EAPI=2
-HOMEPAGE=http://ne.dsi.unimi.it/
+HOMEPAGE=http://ne.di.unimi.it/
 KEYWORDS=amd64 ppc ppc64 x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=>=sys-libs/ncurses-5.2
 SLOT=0
-SRC_URI=http://ne.dsi.unimi.it/ne-2.3.tar.gz
+SRC_URI=http://ne.di.unimi.it/ne-2.3.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=3068956307ba041ebafa067504196639
+_md5_=f33b8488b125fbb02b2d03887e50b9c7
