@@ -1,12 +1,13 @@
-DEFINED_PHASES=compile install prepare
-DEPEND=>=sys-libs/ncurses-5.2 dev-lang/perl
+DEFINED_PHASES=compile configure install prepare
+DEPEND=>=sys-libs/ncurses-5.2[tinfo?]
 DESCRIPTION=the nice editor, easy to use for the beginner and powerful for the wizard
 EAPI=5
-HOMEPAGE=http://ne.dsi.unimi.it/
+HOMEPAGE=http://ne.di.unimi.it/
+IUSE=tinfo
 KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris
-LICENSE=GPL-2
-RDEPEND=>=sys-libs/ncurses-5.2
+LICENSE=GPL-3
+RDEPEND=>=sys-libs/ncurses-5.2[tinfo?] dev-lang/perl
 SLOT=0
-SRC_URI=http://ne.dsi.unimi.it/ne-2.5.tar.gz
+SRC_URI=http://ne.di.unimi.it//ne-2.5.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=38cc8d368e8a48d9b11713113ce65f8f
+_md5_=6fede7748195547bae81365a1ebee1c0
