@@ -1,6 +1,14 @@
 # ChangeLog for app-editors/ne
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ChangeLog,v 1.50 2014/03/11 19:51:09 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ChangeLog,v 1.52 2014/10/28 22:49:52 jer Exp $
+
+  28 Oct 2014; Jeroen Roovers <jer@gentoo.org> ne-2.5.ebuild:
+  DEPEND <=> RDEPEND.
+
+  28 Oct 2014; Jeroen Roovers <jer@gentoo.org> ne-2.3.ebuild, ne-2.5.ebuild,
+  metadata.xml:
+  Fix HOMEPAGE/SRC_URI. Remove parallel make workaround. Fix building against
+  sys-libs/ncurses[tinfo] (bug #459548).
 
   11 Mar 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due #53266
